syntax = "proto3";
import "txs.proto";
package blockchain;

message Empty {}

message BlockHeader {
  string parent_hash = 1;
  string merkle_root = 2;
  string state_root = 3;
  string mix_nonce = 4;
  string coinbase = 5;
  uint32 difficulty = 6;
  uint32 chain_id = 7;
  int32 level = 8;
  uint32 time = 9;
  string nonce = 10;
}

message GetBlockByHashRequest {
  string hash = 1;
}

message GetBlockByLevelRequest {
  string hash = 1;
}

message GetBlockResponse {
  BlockHeader header = 1;
  repeated tx.Transaction txs = 2;
}

message GetBlocksRequest {
  int32 from = 1;
  uint32 count = 2;
}

message GetBlocksResponse {
  repeated BlockHeader blocks = 1;
}

message GetBlockNumberResponse {
  int32 level = 1;
}

service BlockchainRPCService {
  rpc CurrentHead(Empty) returns (BlockHeader);
  rpc BlockLevel(Empty) returns (GetBlockNumberResponse);
  rpc GetBlockByHash (GetBlockByHashRequest) returns (GetBlockResponse);
  rpc GetBlockByLevel (GetBlockByLevelRequest) returns (GetBlockResponse);
  rpc GetBlocks (GetBlocksRequest) returns (GetBlocksResponse);
}
